--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4.11.4",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "recorder-js": "^1.0.7",
     "recorderjs": "^1.0.1",
     "socket.io": "^4.1.2",
-    "socket.io-client": "^4.1.2"
+    "socket.io-client": "^4.1.2",
+    "svg-inline-loader": "^0.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -44,7 +46,8 @@
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.1",
     "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-node-externals": "^3.0.0"
   },
   "config": {
     "forge": {
