--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-react-app",
+  "name": "Dextoware",
   "version": "1.0.0",
   "description": "Dextoware Sample Build",
   "main": "main.js",
@@ -20,10 +20,11 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.4",
     "electron-squirrel-startup": "^1.0.0",
+    "fs": "^0.0.1-security",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "recorder-js": "^1.0.7",
-    "recorderjs": "^1.0.1",
+    "recorderjs": "^1.0.0",
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2",
     "svg-inline-loader": "^0.8.2"
@@ -45,13 +46,13 @@
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.1",
-    "webpack": "^4.44.2",
+    "webpack": "^5.45.1",
     "webpack-cli": "^3.3.12",
     "webpack-node-externals": "^3.0.0"
   },
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {"icon": "logo.icns"},
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
